--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,11 @@ Description: This package exports the functionality of ggplot2 to create radar c
 License: GPL
 Imports:
     forcats,
-    ggplot2
+    ggplot2,
+    dplyr,
+    magrittr
 Suggests: 
     testthat (>= 2.1.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1
