--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,7 @@
 
 export(ggradar)
 import(ggplot2)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,row_number)
+importFrom(magrittr,"%>%")
